# soda-test-service

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml
report/: tarpaulin-report.html
src/: inspector.rs  main.rs  proxy.rs  reverse_proxy.rs
src/bdd/: redis.rs
src/cli/: mod.rs
src/domain/: app_state.rs  capabilities.rs  command.rs  mod.rs  session.rs
src/domain/selenium/: capabilities.rs  command.rs  mod.rs  session.rs
src/middlewares/: basic_auth.rs  mod.rs
src/proxy/: mod.rs
src/session/: inspector.rs  mod.rs
