[package]
name = "soda-test-service"
version = "0.1.3"
authors = ["Julian Didier <did.julian@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SODA Test Service helps with tracking test sessions"
repository="https://github.com/voyages-sncf-technologies/soda-test-service"
readme = "README.md"
keywords = ["soda", "selenium", "automation", "testing", "selenium-grid"]
exclude = [".gitignore", ".travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "voyages-sncf-technologies/soda-test-service", branch = "master" }

[dependencies]
actix = "^0.7"
actix-web = "^0.7"
actix-web-httpauth = "^0.1.0"
env_logger = "^0.6.0"
log = "^0.4.3"
http = "^0.1.13"
clap = "^2.32.0"
futures = "^0.1.25"
failure = "^0.1.3"
url = "^1.7.1"
bytes = "^0.4.11"
serde = "^1.0.80"
serde_derive = "^1.0.71"
serde_json = "^1.0.8"
uuid = { version="^0.6.5", features = ["v4"] }
