[package]
name = "soda-test-service"
version = "0.2.0"
authors = ["Julian Didier <did.julian@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SODA Test Service helps with tracking test sessions"
repository="https://github.com/voyages-sncf-technologies/soda-test-service"
readme = "README.md"
keywords = ["soda", "selenium", "automation", "testing", "selenium-grid"]
exclude = [".gitignore", ".travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "voyages-sncf-technologies/soda-test-service", branch = "master" }

[dependencies]
hyper = "0.13.1"
tokio = { version = "0.2.6", features = ["full"] }
bytes = { version= "0.5.3" }
futures = {version = "0.3"}
serde_json = { version = "1.0.44" }
reqwest = { version = "0.10.0" }
url = { version = "2.1.0" }
