[package]
name = "soda-test-service"
version = "0.2.0"
authors = ["Julian Didier <did.julian@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SODA Test Service helps with tracking test sessions"
repository="https://github.com/voyages-sncf-technologies/soda-test-service"
readme = "README.md"
keywords = ["soda", "selenium", "automation", "testing", "selenium-grid"]
exclude = [".gitignore", ".travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "voyages-sncf-technologies/soda-test-service", branch = "master" }

[dependencies]
hyper = "^0.13.1"
tokio = { version = "^0.2.6", features = ["full"] }
bytes = "^0.5.3"
futures = "^0.3"
clap = "^2.32.0"
serde_json = "^1.0.44"
serde_derive = "^1.0.104"
reqwest = "^0.10.0"
url = "^2.1.0"
serde = "^1.0.104"
log = "^0.4.3"
env_logger = "^0.7.0"
thread_io = "0.2.0"
byte = "0.2.4"
futures-await-test = "0.3.0"


